Bug 156856 - Assertion failed opening a specific PPTX
Summary: Assertion failed opening a specific PPTX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-22 09:10 UTC by Mike Kaganski
Modified: 2023-08-22 18:03 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-08-22 09:10:00 UTC
Open attachment 164800 [details] in a debug build, that uses Skia.

On my system, using Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0a17e45e3fed13c240629fdf0dbb00b8908f5acc
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded

I get an assertion failure at https://opengrok.libreoffice.org/xref/core/vcl/skia/salbmp.cxx?r=5baac4e5&mo=9179&fi=261#263.

Related to commit b94a2dc95dce8c67ddb9f01f7bd91da2a5759d9c, that introduced https://opengrok.libreoffice.org/xref/core/vcl/source/filter/graphicfilter.cxx?r=cf40ee4a#639 (creating a BitmapEx from the alpha mask, when there is an open write access to it, which tries to create an info access, which fails the assertion).
Comment 1 Commit Notification 2023-08-22 18:03:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3cf3e0e21d2f7fa33abced5e2f7291de6e4441eb

tdf#156856: close write access before using AlphaMask

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.