tdf#156856: close write access before using AlphaMask

Change-Id: I432417f03d378f81c890ce6c313a2f140b564a60
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155955
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>