sd/CppunitTest_sd_import_tests_skia.mk
@@ -1,0 +1,13 @@
+# -*- Mode: makefile-gmake; tab-width: 4; indent-tabs-mode: t; fill-column: 100 -*-
+#
+# This file is part of the LibreOffice project.
+#
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
+#
+
+$(eval $(call sd_import_test,_skia))
+$(eval $(call gb_CppunitTest_use_vcl_non_headless,sd_import_tests_skia))
+
+# vim: set noet sw=4 ts=4:
